[HRINFO-977] stop chosen truncating placeholder

--- a/html/sites/all/themes/ocha_basic/sass/hrinfo-custom/_form.scss
+++ b/html/sites/all/themes/ocha_basic/sass/hrinfo-custom/_form.scss
@@ -10,6 +10,12 @@ label {
   max-width: 100%;
 }
 
+.chosen-container-multi {
+  input[value="Choose some options"] {
+    min-width: 200px !important;
+  }
+}
+
 .form-type-checkboxes {
 
     .form-checkboxes .form-item, .form-radios .form-item {
@@ -29,11 +35,6 @@ form .table-responsive {
 }
 
 .node-hr_event-form {
-
-  table {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-  }
 
   #actions,
   .form-item-language input,
